Fix vertical alignment of forum post header

--- a/astrobin/static/css/astrobin.less
+++ b/astrobin/static/css/astrobin.less
@@ -3834,6 +3834,7 @@ th.forum-name {
         position: relative;
         padding: 0 20px !important;
         height: 60px;
+        vertical-align: middle !important;
     }
 
     img {
